--- a/package.json
+++ b/package.json
@@ -9,22 +9,34 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "@expo/metro-runtime": "~3.1.3",
     "@hookform/resolvers": "^3.3.4",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
+    "axios": "^1.7.2",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "emailjs": "^4.0.3",
     "expo": "~50.0.14",
+    "expo-location": "^17.0.1",
+    "expo-permissions": "^14.4.0",
     "expo-status-bar": "~1.11.1",
+    "express": "^4.19.2",
+    "mongoose": "^8.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.3",
     "react-native": "0.73.6",
+    "react-native-dimension": "^1.0.6",
+    "react-native-maps": "^1.15.6",
     "react-native-navigation-container": "^1.0.6",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6",
-    "yup": "^1.4.0",
-    "@react-native-async-storage/async-storage": "1.21.0"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
